--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+et-xmlfile==1.1.0
 executing==2.0.1
 fonttools==4.51.0
+fpdf==1.7.2
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
@@ -37,6 +39,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 nest-asyncio==1.6.0
 numpy==1.26.4
+openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.2
